Fix sidebar width in compact mode and add top buttons visibility fix

--- a/src/browser/base/content/zen-styles/zen-compact-mode.css
+++ b/src/browser/base/content/zen-styles/zen-compact-mode.css
@@ -28,7 +28,7 @@
       }
 
       #navigator-toolbox {
-        --zen-toolbox-max-width: 54px !important;
+        --zen-toolbox-max-width: 64px !important;
         --zen-compact-float: calc(var(--zen-element-separation) - 1px);
 
         &:not([animate='true']) {
